@@ -3,8 +3,20 @@ data_code
 loop_
 _category.key
 _category.version_item
-1 3.1.4
-2 31.4.90
-3 1.2.3.4
-4 1.2.3a
-5 Text
+    1 3.1.4
+    2 31.4.90
+    3 1.2.3.4
+    4 1.2.3a
+    5 Text
+# Version with a pre-release part
+    6 0.4.0-dev.4
+# Version with valid pre-release and build metatada parts
+    7 0.4.0-dev.4+build.123
+# Version with a valid build meatadata part
+    8 0.4.0+build.123
+# Version with an invalid pre-release part
+    9 0.4.0-dev.04
+# Version with an invalid build meatadata part
+   10 0.4.0+č
+# Version without the mandatory PATCH part.
+   11 1.5
