@@ -1,3 +1,6 @@
-scripts/ddlm_validate: tests/cases/ddlm_validate_008.inp data_code: NOTE, data item '_category.version_item' value '1.2.3.4' violates content type constraints -- the value should be a version digit string of the form <major>.<version>.<update>.
-scripts/ddlm_validate: tests/cases/ddlm_validate_008.inp data_code: NOTE, data item '_category.version_item' value '1.2.3a' violates content type constraints -- the value should be a version digit string of the form <major>.<version>.<update>.
-scripts/ddlm_validate: tests/cases/ddlm_validate_008.inp data_code: NOTE, data item '_category.version_item' value 'Text' violates content type constraints -- the value should be a version digit string of the form <major>.<version>.<update>.
+scripts/ddlm_validate: tests/cases/ddlm_validate_008.inp data_code: NOTE, data item '_category.version_item' value '0.4.0+č' violates content type constraints -- the value should be a SemVer 2.0.0 string of the form <major>.<version>.<update> followed by optional pre-release or build metadata labels, e.g. '1.234.56', '4.7.8-dev.3.d', '0.0.1+build.7'.
+scripts/ddlm_validate: tests/cases/ddlm_validate_008.inp data_code: NOTE, data item '_category.version_item' value '0.4.0-dev.04' violates content type constraints -- the value should be a SemVer 2.0.0 string of the form <major>.<version>.<update> followed by optional pre-release or build metadata labels, e.g. '1.234.56', '4.7.8-dev.3.d', '0.0.1+build.7'.
+scripts/ddlm_validate: tests/cases/ddlm_validate_008.inp data_code: NOTE, data item '_category.version_item' value '1.2.3.4' violates content type constraints -- the value should be a SemVer 2.0.0 string of the form <major>.<version>.<update> followed by optional pre-release or build metadata labels, e.g. '1.234.56', '4.7.8-dev.3.d', '0.0.1+build.7'.
+scripts/ddlm_validate: tests/cases/ddlm_validate_008.inp data_code: NOTE, data item '_category.version_item' value '1.2.3a' violates content type constraints -- the value should be a SemVer 2.0.0 string of the form <major>.<version>.<update> followed by optional pre-release or build metadata labels, e.g. '1.234.56', '4.7.8-dev.3.d', '0.0.1+build.7'.
+scripts/ddlm_validate: tests/cases/ddlm_validate_008.inp data_code: NOTE, data item '_category.version_item' value '1.5' violates content type constraints -- the value should be a SemVer 2.0.0 string of the form <major>.<version>.<update> followed by optional pre-release or build metadata labels, e.g. '1.234.56', '4.7.8-dev.3.d', '0.0.1+build.7'.
+scripts/ddlm_validate: tests/cases/ddlm_validate_008.inp data_code: NOTE, data item '_category.version_item' value 'Text' violates content type constraints -- the value should be a SemVer 2.0.0 string of the form <major>.<version>.<update> followed by optional pre-release or build metadata labels, e.g. '1.234.56', '4.7.8-dev.3.d', '0.0.1+build.7'.
