@@ -26,5 +26,5 @@ scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data i
 scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.tag_item' value '?' violates content type constraints -- the value must start with an underscore ('_') symbol (5 times).
 scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.uri_item' value '.' violates content type constraints -- an URI string must start with a scheme component (5 times).
 scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.uri_item' value '?' violates content type constraints -- an URI string must start with a scheme component (5 times).
-scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.version_item' value '.' violates content type constraints -- the value should be a version digit string of the form <major>.<version>.<update> (5 times).
-scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.version_item' value '?' violates content type constraints -- the value should be a version digit string of the form <major>.<version>.<update> (5 times).
+scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.version_item' value '.' violates content type constraints -- the value should be a SemVer 2.0.0 string of the form <major>.<version>.<update> followed by optional pre-release or build metadata labels, e.g. '1.234.56', '4.7.8-dev.3.d', '0.0.1+build.7' (5 times).
+scripts/ddlm_validate: tests/cases/ddlm_validate_025.inp data_code: NOTE, data item '_category.version_item' value '?' violates content type constraints -- the value should be a SemVer 2.0.0 string of the form <major>.<version>.<update> followed by optional pre-release or build metadata labels, e.g. '1.234.56', '4.7.8-dev.3.d', '0.0.1+build.7' (5 times).
