@@ -73,6 +73,8 @@ cod-tools (unreleased)
           violations.
         - updated the validate_application_scope() subroutine to no longer
           generate duplicate messages relating to the application scope.
+        - updated the check_primitive_data_type() subroutine to treat version
+          numbers with pre-release and build metadata labels as valid.
     - cif_cod_deposit:
         - corrected the configuration variable name 'bypass_check_password'.
     - cif_filter:
